# clippy2000

./: .gitignore  CLAUDE.md  CMakeLists.txt  build.bat  clean.bat  run.bat
include/: ClipboardHistory.h  ClipboardMonitor.h  ClipboardUtils.h  HistoryWindow.h  HotkeyManager.h  Storage.h  SystemTray.h
src/: ClipboardHistory.cpp  ClipboardMonitor.cpp  ClipboardUtils.cpp  HistoryWindow.cpp  HotkeyManager.cpp  Storage.cpp  SystemTray.cpp  main.cpp
